--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "faker": "^5.2.0",
     "helmet": "^3.23.3",
     "http-status-codes": "^1.3.2",
+    "ioredis": "^4.19.4",
     "joi": "^17.3.0",
     "joi-phone-validator": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -81,6 +82,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "randomstring": "^1.1.5",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.4.0",
     "sequelize-typescript": "^2.0.0",
@@ -104,6 +106,7 @@
     "@types/multer": "^1.4.3",
     "@types/node": "^14.14.22",
     "@types/randomstring": "^1.1.6",
+    "@types/redis": "^2.8.28",
     "@types/sequelize": "^4.28.9",
     "chai": "^4.2.0",
     "concurrently": "^5.2.0",
