--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "lint": "tslint -p tsconfig.json -c tslint.json --fix"
   },
   "types": "src/index.ts",
-
   "jest": {
     "moduleFileExtensions": [
       "ts",
@@ -84,6 +83,8 @@
     "mysql2": "^2.2.5",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
+    "question-generator": "0.0.3",
+    "random-questions": "^1.0.1",
     "randomstring": "^1.1.5",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
