--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rimraf dist",
     "start": "node dist/index.js",
     "start:dev": "nodemon dist/index.js",
+    "build": "npm run clean && tsc",
     "build:dev": "tsc --watch --preserveWatchOutput",
     "doc": "typedoc --plugin typedoc-plugin-markdown --out docs --excludeExternals --excludePrivate --includeVersion src",
     "dev": "concurrently  \"npm:build:dev\" \"npm:start:dev\"",
