--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 JWT_SECRET=key
+DATABASE_HOST=localhost
+DATABASE_USERNAME=emmanuel
+DATABASE_PASSWORD=password
+DATABASE_NAME=korapay
+DATABASE_PORT=5432
